// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button есть корректный снимок 1`] = `
<button
  className=""
  onClick={null}
>
  Дай мне больше
</button>
`;

exports[`Search есть корректный снимок 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      type="text"
    />
    <button
      className="button-submit"
      onClick={null}
      type="submit"
    >
      Поиск
    </button>
  </form>
</div>
`;

exports[`Table есть корректный снимок 1`] = `
<div
  className="table"
>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a />
      1
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Отбросить
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a />
      2
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Отбросить
      </button>
    </span>
  </div>
</div>
`;

exports[`есть корректный снимок 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <input
          onChange={[Function]}
          type="text"
          value="redux"
        />
        <button
          className="button-submit"
          onClick={null}
          type="submit"
        >
          Поиск
        </button>
      </form>
    </div>
  </div>
  <div
    className="table"
  />
  <div
    className="interactions"
  >
    <button
      className=""
      onClick={[Function]}
      type="button"
    >
      Больше историй
    </button>
  </div>
</div>
`;
